modify mint nft process
